--- a/app/globals.css
+++ b/app/globals.css
@@ -7,3 +7,18 @@
   initial-value: 0;
   inherits: false;
 }
+
+@layer components {
+  .btn-primary {
+    @apply relative flex w-full justify-center rounded-md border border-transparent bg-indigo-600 py-2 px-4 text-sm font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2;
+  }
+}
+
+/* Hide input type="number" spinners */
+@layer base {
+  input[type="number"]::-webkit-inner-spin-button,
+  input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+}
